<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cinerik Uiper</string>
    <string name="home_explore">Explore</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_tickets">My tickets</string>
    <string name="menu_my_account">My account</string>
    <string name="menu_account_login">Sign in</string>
    <string name="menu_account_logout">Sign out</string>
    <string name="change_password_title">Change password</string>
    <string name="change_password_desc">Enter your old and new password.</string>
    <string name="change_password_old_password">Old password</string>
    <string name="change_password_new_password">New password</string>
    <string name="change_password_save">Save</string>
    <string name="change_password_password_changed_notification">Your password has been changed.</string>
    <string name="login_title">Sign in</string>
    <string name="login_desc">Sign in to your account.</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Sign in</string>
    <string name="login_wrong_credentials_error">Username and/or password incorrect.</string>
    <string name="login_empty_input_fields_error">One or more input fields are empty.</string>
    <string name="login_or">Or</string>
    <string name="login_create_account">Create account</string>
    <string name="detail_show_more">Show more</string>
    <string name="detail_login_warning">Sign in to buy tickets.</string>
    <string name="detail_order_tickets">Buy tickets</string>
    <string name="detail_no_shows_found">No shows found.</string>
    <string name="my_account_title">My account</string>
    <string name="my_account_desc">You can change your credentials here.</string>
    <string name="my_account_username">Username</string>
    <string name="my_account_first_name">First name</string>
    <string name="my_account_last_name">Last name</string>
    <string name="my_account_email">Email</string>
    <string name="my_account_password">Password</string>
    <string name="my_account_date_of_birth">Date of birth</string>
    <string name="my_account_address">Address</string>
    <string name="my_account_update">Update</string>
    <string name="my_account_details_updated">Your account credentials were updated.</string>
    <string name="order_date_time_title">Choose your date and time</string>
    <string name="order_date">Date</string>
    <string name="order_time">Time</string>
    <string name="order_ticket_amount_title">Choose your tickets</string>
    <string name="order_ticket_child">Child</string>
    <string name="order_ticket_adult">Adult</string>
    <string name="order_ticket_senior">Senior</string>
    <string name="order_seats_title">Choose your seats</string>
    <string name="order_selected_seats">seats</string>
    <string name="order_available">Available</string>
    <string name="order_reserved">Reserved</string>
    <string name="order_selected">Selected</string>
    <string name="order_order">Order</string>
    <string name="order_success_title">Order successful</string>
    <string name="order_success_desc">Thank you for your order! View the order details below.</string>
    <string name="order_success_date">Date:</string>
    <string name="order_success_time">Time:</string>
    <string name="order_success_tickets">Amount of tickets:</string>
    <string name="order_success_price">Total price:</string>
    <string name="order_success_back_home">Back to home</string>
    <string name="order_success_my_tickets">View my tickets</string>
    <string name="register_title">Register</string>
    <string name="register_desc">Create your new account</string>
    <string name="register_username">Username</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_date_of_birth">Date of birth</string>
    <string name="register_address">Address</string>
    <string name="register_register">Register</string>
    <string name="register_account_created_notification">Your account has been created.</string>
    <string name="register_username_email_error">An error has occurred. Your email and/or username may already be in use.</string>
    <string name="ticket_list_title">My tickets</string>
    <string name="ticket_list_desc">You can find your tickets here.</string>
    <string name="ticket_list_no_tickets_error">No tickets found.</string>
    <string name="ticket_date">Date:</string>
    <string name="ticket_row">Row:</string>
    <string name="ticket_seat">Seat:</string>
    <string name="ticket_time">Time:</string>
    <string name="ticket_hall">Hall:</string>
    <string name="ticket_qr_code">QR code</string>
    <string name="home_explore_desc">Let\'s find your favorite movie.</string>
    <string name="textfield_wrong">Check input field</string>
    <string name="password_requirements">Password must have minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character</string>
    <string name="movie_details_show_more">Show more</string>
    <string name="movie_details_show_less">Show less</string>
    <string name="logout_successfull">Logout successfull</string>
    <string name="no_data_found">No data found</string>
</resources>