<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent" android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tint6">

        <include
            android:id="@+id/register_toolbar"
            layout="@layout/toolbar_fragment" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_title"
            android:textColor="@color/tint1"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_toolbar" />

        <TextView
            android:id="@+id/register_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_desc"
            android:textColor="@color/tint4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title" />

        <TextView
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_username"
            android:textColor="@color/tint4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_desc" />

        <EditText
            android:id="@+id/register_username_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/input_background"
            android:paddingHorizontal="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username" />

        <TextView
            android:id="@+id/register_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_first_name"
            android:textColor="@color/tint4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username_input" />

        <EditText
            android:id="@+id/register_firstname_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/input_background"
            android:paddingHorizontal="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_firstname" />

        <TextView
            android:id="@+id/register_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_last_name"
            android:textColor="@color/tint4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_firstname_input" />

        <EditText
            android:id="@+id/register_lastname_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/input_background"
            android:paddingHorizontal="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_lastname" />

        <TextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_email"
            android:textColor="@color/tint4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_lastname_input" />

        <EditText
            android:id="@+id/register_email_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/input_background"
            android:paddingHorizontal="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email" />

        <TextView
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_password"
            android:textColor="@color/tint4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_input" />

        <EditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/input_background"
            android:paddingHorizontal="15dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password" />

        <TextView
            android:id="@+id/register_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_date_of_birth"
            android:textColor="@color/tint4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_input" />

        <EditText
            android:id="@+id/register_birthdate_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:paddingHorizontal="15dp"
            android:background="@drawable/input_background"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_birthdate" />

        <TextView
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_address"
            android:textColor="@color/tint4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_birthdate_input" />

        <EditText
            android:id="@+id/register_address_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/input_background"
            android:paddingHorizontal="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_address" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_submit_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/purple_gradient"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register_register"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_address_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>